force-app/main/default/objects/User_Login__c/User_Login__c.object-meta.xml
<CustomObject>
    <description>Object to hold the records of user for handling the auth and login details</description>
    <label>User Login</label>
    <nameField>
        <displayFormat>GLR-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User logins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>