force-app/main/default/objects/User_Login__c/fields/Block_User_For_24_Hours__c.field-meta.xml
<CustomField>
    <fullName>Block_User_For_24_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Block user for 24 hours.</description>
    <inlineHelpText>Block user for 24 hours.</inlineHelpText>
    <label>Block User For 24 Hours</label>
    <type>Checkbox</type>
</CustomField>