force-app/main/default/objects/User_Login__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Status of user account.</description>
    <inlineHelpText>Status of user account.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>