force-app/main/default/objects/User_Login__c/fields/Last_Login_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_Date_Time__c</fullName>
    <description>Last Login Date Time.</description>
    <inlineHelpText>Last Login Date Time.</inlineHelpText>
    <label>Last Login Date Time</label>
    <type>DateTime</type>
</CustomField>