force-app/main/default/objects/User_Login__c/fields/No_of_failed_Login_attempt_in_24_hours__c.field-meta.xml
<CustomField>
    <fullName>No_of_failed_Login_attempt_in_24_hours__c</fullName>
    <description>No of failed login attempt in 24 hours.</description>
    <inlineHelpText>No of failed login attempt in 24 hours.</inlineHelpText>
    <label>No of failed Login attempt in 24 hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>