force-app/main/default/objects/User_Login__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>User Password.</description>
    <inlineHelpText>User Password.</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>