force-app/main/default/objects/User_Login__c/fields/Reason_For_Blocking_User__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Blocking_User__c</fullName>
    <label>Reason For Blocking User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>