force-app/main/default/objects/User_Login__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <description>User Email.</description>
    <inlineHelpText>User Email.</inlineHelpText>
    <label>User Email</label>
    <type>Email</type>
</CustomField>