force-app/main/default/objects/User_Login__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>Hold the user name.</description>
    <inlineHelpText>Hold the user name.</inlineHelpText>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>