force-app/main/default/objects/User_Login__c/fields/User_Phone__c.field-meta.xml
<CustomField>
    <fullName>User_Phone__c</fullName>
    <description>User Phone Number.</description>
    <inlineHelpText>User Phone Number.</inlineHelpText>
    <label>User Phone</label>
    <type>Phone</type>
</CustomField>