force-app/main/default/objects/User_Login__c/fields/View_All_Records__c.field-meta.xml
<CustomField>
    <fullName>View_All_Records__c</fullName>
    <description>View All login credentials records.</description>
    <inlineHelpText>View All login credentials records.</inlineHelpText>
    <label>View All Records</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allowed</fullName>
            </value>
            <value>
                <fullName>Not Allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>