force-app/main/default/objects/User_Login__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>User_Name__c</columns>
    <columns>User_Email__c</columns>
    <columns>User_Phone__c</columns>
    <columns>View_All_Records__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>